
2006-09-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: fixed libXmu detection in X11R6 paths,
		including setting runtime search path
	* ffmpeg-svn19513/libavformat/movenc.c, src/xtoffmpeg.c:
		fixed root cause for segfault in movenc.c and
		revert to original

2006-09-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_ui.c: removed unconditional debug output
	* src/codecs.c: fixed bug in the definition of the flv format
	* src/xtoffmpeg.c: added check for file_oformat != NULL, and 
		did some optimization to get rid of the "clipping
		dct coefficient message" (use trellis quant, mbd=2,
		no obmc, fast ffmpeg operation)
	* ffmpeg-svn19513/libavformat/movenc.c: fixed NULL pointer,
		need to watch this gets fixed upstream
	* src: gnome_ui.c, gnome-xvidcap.glade: added width and height
		to the results dialog
	
2006-09-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: control.h, gnome_ui.c, main.c: wake up sleeping capture
		thread when hitting stop
	* src: app_data.c, app_data.h, gnome_ui.c, gnome_options.c: fix
		command execution (animate etc.) to handle floating point
		values for time_pre_frame, needed for fps < 1
	* src/xtoffmpeg.c: fixed buffer underflows with m2v format

2006-09-05  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_ui.c: fix results dialog's calculation of actual
		frame rates for fps < 1

2006-09-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_options.c, app_data.c: fix for bug # 1551021
	* src/main.c, man/xvidcap.1: updated usage and man page

2006-09-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: fixed remainder of bug # 1109935
	* src/options.c,src/gnome_ui.c: fixed bug # 1109451
	* src/gnome_options.c: removed debug output
	* src/codecs.c: made mp3 default for mov format

2006-08-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/codecs.c: removed fraction fps rates till xvidcap is adapted
		to changed fractional timing handling in ffmpeg