@@ -1,4 +1,9 @@
 
+2006-09-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src/gnome-xvidcap.glade: made main control not resizable
+	* src/main.c: fixed segfault with --sync command line arg
+	* po/de.po: fixed some translations
+
 2006-09-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* configure.in: fixed libXmu detection in X11R6 paths,
 		including setting runtime search path
